Version 0.2.0 (tzdata v2006c) - 3-Apr-2006
------------------------------------------

* Use timestamps rather than DateTime objects in zone files for times between
  1970 and 2037 (the range of Time).
* Don't convert passed in Time objects to DateTime in most cases (provides 
  a substantial performance improvement).
* Allow integer timestamps (time in seconds since 1970-1-1) to be used as well 
  as Time and DateTime objects in all public methods that take times as 
  parameters.
* Tool to compare TZInfo conversions with output from zdump.
* TZDataParser zone generation algorithm rewritten. Now based on the zic code.
  TZInfo is now 100% compatible with zic/zdump output.
* Riyadh Solar Time zones now included again (generation time has been reduced
  with TZDataParser changes).
* Use binary mode when writing zone and country files to get Unix (\n) new
  lines.
* Omit unnecessary quotes in zone identifier symbols.
* Omit the final transition to DST if there is a prior transition in the last
  year processed to standard time.
* Updated to tzdata version 2006c
  (http://article.gmane.org/gmane.comp.time.tz/920).


Version 0.1.2 (tzdata v2006a) - 5-Feb-2006
------------------------------------------

* Add lib directory to the load path when tzinfo is required. Makes it easier
  to use tzinfo gem when unpacked to vendor directory in rails. 
* Updated to tzdata version 2006a 
  (http://article.gmane.org/gmane.comp.time.tz/738).
* build_tz_classes rake task now handles running svn add and svn delete as new 
  timezones and countries are added and old ones are removed.
* Return a better error when attempting to use a Timezone instance that was
  constructed with Timezone.new(nil). This will occur when using Rails'
  composed_of. When the timezone identifier in the database is null, attempting
  to use the Timezone will now result in an UnknownTimezone exception rather 
  than a NameError.


Version 0.1.1 (tzdata v2005q) - 18-Dec-2005